# event-queue

./: .gitignore  CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/src/: main.c
commons/src/: definitions.h
libevent/: CMakeLists.txt
libevent/src/: zz_event.c  zz_event.h
libgui/: CMakeLists.txt
libgui/src/: gui.c  gui.h
libmainapp/: CMakeLists.txt
libmainapp/src/: mainapp.c  mainapp.h
libutils/: CMakeLists.txt
libutils/src/: utils.c  utils.h
